--- a/tab.html
+++ b/tab.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="tab.css">
+    </head>
+    <body>
+        <div class="tab">
+            <div class="tab-nav">
+                <a href="" class="tab-nav-item">Tab-0</a>
+                <a href="" class="tab-nav-item">Tab-1</a>
+                <a href="" class="tab-nav-item">Tab-2</a>
+            </div>
+            <div class="tab-contents">
+                <div class="tab-contents-item">
+                    タブその0
+                </div>
+                <div class="tab-contents-item">
+                    タブその1
+                </div>
+                <div class="tab-contents-item">
+                    タブその2
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
