--- a/tab.html
+++ b/tab.html
@@ -23,5 +23,6 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="tab.js"></script>
     </body>
 </html>
