--- a/tab.html
+++ b/tab.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="tab.css">
     </head>
     <body>
-        <div class="tab">
+        <div class="tab" id="js-tab">
             <div class="tab-nav">
                 <a href="" class="tab-nav-item is-active">Tab-0</a>
                 <a href="" class="tab-nav-item">Tab-1</a>
