--- a/tab.html
+++ b/tab.html
@@ -7,9 +7,9 @@
     <body>
         <div class="tab" id="js-tab">
             <div class="tab-nav">
-                <a href="" class="tab-nav-item is-active">Tab-0</a>
-                <a href="" class="tab-nav-item">Tab-1</a>
-                <a href="" class="tab-nav-item">Tab-2</a>
+                <a href="" class="tab-nav-item is-active" data-nav="0">Tab-0</a>
+                <a href="" class="tab-nav-item" data-nav="1">Tab-1</a>
+                <a href="" class="tab-nav-item" data-nav="2">Tab-2</a>
             </div>
             <div class="tab-contents">
                 <div class="tab-contents-item">
