--- a/tab.html
+++ b/tab.html
@@ -7,7 +7,7 @@
     <body>
         <div class="tab" id="js-tab">
             <div class="tab-nav">
-                <a href="" class="tab-nav-item is-active" data-nav="0">Tab-0</a>
+                <a href="" class="tab-nav-item" data-nav="0">Tab-0</a>
                 <a href="" class="tab-nav-item" data-nav="1">Tab-1</a>
                 <a href="" class="tab-nav-item" data-nav="2">Tab-2</a>
             </div>
