Add: bodyの内容を追加

--- a/accordion.html
+++ b/accordion.html
@@ -6,6 +6,21 @@
     <title>クラスとインスタンス</title>
 </head>
 <body>
-    
+    <div class="accordion">
+        <a href="" class="accordion-trigger">
+            Q1.Google社の社名の由来は？
+        </a>
+        <div class="accordion-contents">
+            A1.Googol(10^100)のタイポ
+        </div>
+        <a href="" class="accordion-trigger">
+            Q2.マウスの移動距離単位は？
+        </a>
+        <div class="accordion-contents">
+            A2.ミッキー<br>
+            1ミッキー = 1/100 inch = 約0.25 mm<br>
+            由来はまさかの、ディズニーのミッキーマウス！
+        </div>
+    </div>
 </body>
 </html>
