--- a/accordion.html
+++ b/accordion.html
@@ -6,7 +6,7 @@
     <title>クラスとインスタンス</title>
 </head>
 <body>
-    <div class="accordion">
+    <div class="accordion" id="js-accordion">
         <a href="" class="accordion-trigger">
             Q1.Google社の社名の由来は？
         </a>
@@ -22,5 +22,7 @@
             由来はまさかの、ディズニーのミッキーマウス！
         </div>
     </div>
+
+    <script src="accordion.js"></script>
 </body>
 </html>
