Add: htmlにアコーディオンを追加

--- a/accordion.html
+++ b/accordion.html
@@ -21,6 +21,33 @@
             1ミッキー = 1/100 inch = 約0.25 mm<br>
             由来はまさかの、ディズニーのミッキーマウス！
         </div>
+
+        <br>
+        <br>
+        <br>
+
+        <a href="" class="accordion-trigger">
+            Q3.あああ
+        </a>
+        <div class="accordion-contents">
+            A3.あああ
+        </div>
+        <a href="" class="accordion-trigger">
+            Q4.いいい
+        </a>
+        <div class="accordion-contents">
+            A4.いいい
+        </div>
+
+        <br>
+        <br>
+
+        <a href="" class="accordion-trigger">
+            Q5.ううう
+        </a>
+        <div class="accordion-contents">
+            A5.ううう
+        </div>
     </div>
 
     <script src="accordion.js"></script>
