--- a/accordion.html
+++ b/accordion.html
@@ -26,15 +26,15 @@
         <br>
         <br>
 
-        <a href="" class="accordion-trigger">
+        <p href="" class="accordion-trigger">
             Q3.あああ
-        </a>
+        </p>
         <div class="accordion-contents">
             A3.あああ
         </div>
-        <a href="" class="accordion-trigger">
+        <p href="" class="accordion-trigger">
             Q4.いいい
-        </a>
+        </p>
         <div class="accordion-contents">
             A4.いいい
         </div>
