--- a/accordion.html
+++ b/accordion.html
@@ -21,34 +21,38 @@
             1ミッキー = 1/100 inch = 約0.25 mm<br>
             由来はまさかの、ディズニーのミッキーマウス！
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
-        <p href="" class="accordion-trigger">
+    <div class="accordion" id="js-accordion2">
+        <p class="accordion-trigger">
             Q3.あああ
         </p>
         <div class="accordion-contents">
             A3.あああ
         </div>
-        <p href="" class="accordion-trigger">
+        <p class="accordion-trigger">
             Q4.いいい
         </p>
         <div class="accordion-contents">
             A4.いいい
         </div>
-
-        <br>
-        <br>
-
-        <a href="" class="accordion-trigger">
-            Q5.ううう
-        </a>
-        <div class="accordion-contents">
-            A5.ううう
-        </div>
     </div>
+
+        <br>
+        <br>
+
+    <dl class="accordion" id="js-accordion3">
+        <dt class="accordion-trigger">
+            Q5.ううう
+        </dt>
+        <dd class="accordion-contents">
+            A5.ううう
+        </dd>
+    </dl>
 
     <script src="accordion.js"></script>
 </body>
